# smartcalc

./: README.md
docs/: index.html
docs/html/: credit_calculator.html  deposit_calculator.html  math_calculator.html
docs/js/: to_the_top.js
src/: CMakeLists.txt  Makefile  credits.c  credits.h  defines.h  main.cpp  postfix.c  postfix.h  stack.c  stack.h  string_processing.c  string_processing.h  tests.c
src/Docs/: documentation.html  style.css
src/SmartCalc/: SmartCalc.pro  credit.cpp  credit.h  credit.ui  deposit.cpp  deposit.h  deposit.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/build-SmartCalc-Desktop_Qt_6_3_2_MinGW_64_bit-Debug/: ui_credit.h  ui_deposit.h  ui_mainwindow.h
src/controller/: controller.h
src/docs/css/: style.css
src/docs/html/: index.html
src/model/: credit_calc.cc  credit_calc.h  credit_misc.h  date.cc  date.h  deposit_calc.cc  deposit_calc.h  math_calc.cc  math_calc.h  model.h  tokenizer.cc  tokenizer.h  tokens.cc  tokens.h  validator.cc  validator.h
src/tests/: credit_calculator_tests.cc  credit_calculator_tests.h  date_tests.cc  date_tests.h  deposit_calculator_tests.cc  deposit_calculator_tests.h  math_calculator_tests.cc  math_calculator_tests.h  tests.cpp  tests_misc.h
src/view/: credit_calculator_view.cpp  credit_calculator_view.h  credit_calculator_view.ui  deposit_calculator_view.cpp  deposit_calculator_view.h  deposit_calculator_view.ui  math_calculator_view.cpp  math_calculator_view.h  math_calculator_view.ui  paymentwidget.cpp  paymentwidget.h  paymentwidget.ui  view.h
